tests/null_as_numeric_cast_bad.stderr
tests/null_as_numeric_cast_bad.hop:3:14: error: HOP2004: type mismatch: cannot cast null to int
