tests/null_as_numeric_cast_bad.hop
// Verifies direct null as numeric cast is rejected.
fn main() {
	var x int = null as int
	_ = x
}
